--- a/test/com/axiastudio/zoefx/demo/books.fxml
+++ b/test/com/axiastudio/zoefx/demo/books.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="439.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="com.axiastudio.zoefx.controller.FXController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="439.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="com.axiastudio.zoefx.core.controller.FXController">
   <children>
     <TextField fx:id="title" layoutX="14.0" layoutY="69.0" prefWidth="200.0" />
     <TextArea fx:id="description" layoutX="14.0" layoutY="104.0" prefWidth="200.0" wrapText="true" />
