--- a/test/com/axiastudio/zoefx/demo/books.fxml
+++ b/test/com/axiastudio/zoefx/demo/books.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="439.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.axiastudio.zoefx.core.controller.FXController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="439.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <TextField fx:id="title" layoutX="14.0" layoutY="69.0" prefWidth="200.0" />
     <TextArea fx:id="description" layoutX="14.0" layoutY="104.0" prefWidth="200.0" wrapText="true" />
@@ -18,6 +18,14 @@
           <String fx:value="Item 3" />
         </FXCollections>
       </items>
-    </ChoiceBox><TextField fx:id="year" layoutX="137.0" layoutY="311.0" prefHeight="26.0" prefWidth="77.0" /><Label layoutX="35.853271484375" layoutY="316.0" text="year" />
+    </ChoiceBox><TextField fx:id="year" layoutX="137.0" layoutY="311.0" prefHeight="26.0" prefWidth="77.0" /><Label layoutX="35.853271484375" layoutY="316.0" text="year" /><ChoiceBox fx:id="author" layoutX="14.0" layoutY="345.0" prefHeight="26.0" prefWidth="200.0" xmlns:fx="http://javafx.com/fxml">
+  <items>
+    <FXCollections fx:factory="observableArrayList">
+      <String fx:value="Item 1" />
+      <String fx:value="Item 2" />
+      <String fx:value="Item 3" />
+    </FXCollections>
+  </items>
+</ChoiceBox>
   </children>
 </AnchorPane>
