Differential strategy for the toolbar's layout based on the root type of the scene.

--- a/test/com/axiastudio/zoefx/demo/books.fxml
+++ b/test/com/axiastudio/zoefx/demo/books.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="439.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <TextField fx:id="title" layoutX="14.0" layoutY="69.0" prefWidth="200.0" />
     <TextArea fx:id="description" layoutX="14.0" layoutY="104.0" prefWidth="200.0" wrapText="true" />
