--- a/src/com/axiastudio/zoefx/core/skins/black/style.css
+++ b/src/com/axiastudio/zoefx/core/skins/black/style.css
@@ -2,6 +2,7 @@
     -fx-border-color: transparent;
     -fx-background-color: transparent;
     -fx-spacing: 0;
+    -fx-border-radius: 8;
 }
 
 .button:hover {
