--- a/src/com/axiastudio/zoefx/core/view/report/report.fxml
+++ b/src/com/axiastudio/zoefx/core/view/report/report.fxml
@@ -5,9 +5,13 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.axiastudio.zoefx.core.view.report.ReportController">
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.axiastudio.zoefx.core.view.report.ReportController">
    <children>
-      <ChoiceBox fx:id="templates" layoutX="46.0" layoutY="67.0" prefHeight="26.0" prefWidth="263.0" />
-      <Button fx:id="print" layoutX="46.0" layoutY="103.0" mnemonicParsing="false" text="Print" />
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
+         <children>
+            <ChoiceBox fx:id="templates" layoutX="46.0" layoutY="67.0" prefHeight="26.0" prefWidth="263.0" />
+            <Button layoutX="46.0" layoutY="103.0" mnemonicParsing="false" onAction="#print" text="Print" />
+         </children>
+      </AnchorPane>
    </children>
-</AnchorPane>
+</VBox>
