--- a/src/com/axiastudio/zoefx/core/view/report/report.fxml
+++ b/src/com/axiastudio/zoefx/core/view/report/report.fxml
@@ -4,13 +4,13 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.axiastudio.zoefx.core.view.report.ReportController">
    <children>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="350.0">
          <children>
-            <ChoiceBox fx:id="templates" layoutX="46.0" layoutY="67.0" prefHeight="26.0" prefWidth="263.0" />
-            <Button layoutX="46.0" layoutY="103.0" mnemonicParsing="false" onAction="#print" text="Print" />
+            <ChoiceBox fx:id="templates" layoutX="20.0" layoutY="18.0" prefHeight="26.0" prefWidth="308.0" />
+            <Button fx:id="printButton" layoutX="203.0" layoutY="57.0" mnemonicParsing="false" onAction="#print" prefHeight="26.0" prefWidth="125.0" text="Print" />
+            <Button fx:id="exportButton" layoutX="67.0" layoutY="57.0" mnemonicParsing="false" onAction="#exportToPdf" prefHeight="26.0" prefWidth="125.0" text="Export as PDF" />
          </children>
       </AnchorPane>
    </children>
