--- a/src/com/axiastudio/zoefx/core/view/msgbox/msgbox.fxml
+++ b/src/com/axiastudio/zoefx/core/view/msgbox/msgbox.fxml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
-
 
 <VBox fx:id="vbox" maxHeight="-Infinity" maxWidth="400.0" minHeight="-Infinity" minWidth="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="160.0" prefWidth="400.0">
          <children>
             <Label fx:id="iconQuestionMessageBox" layoutX="14.0" layoutY="14.0" prefHeight="64.0" prefWidth="64.0" />
-            <Label fx:id="mastheadLabel" layoutX="96.0" layoutY="14.0" prefHeight="64.0" prefWidth="290.0" text="masthead" />
-            <Label fx:id="messageLabel" layoutX="14.0" layoutY="93.0" prefHeight="58.0" prefWidth="372.0" text="message" />
+            <Label fx:id="mastheadLabel" layoutX="96.0" layoutY="14.0" prefHeight="64.0" prefWidth="290.0" text="masthead" wrapText="true">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font></Label>
+            <Label fx:id="messageLabel" layoutX="14.0" layoutY="93.0" prefHeight="58.0" prefWidth="372.0" text="message" wrapText="true" />
          </children>
       </AnchorPane>
       <Accordion fx:id="detailsAccordion">
