--- a/test/com/axiastudio/zoefx/demo/authors.fxml
+++ b/test/com/axiastudio/zoefx/demo/authors.fxml
@@ -7,7 +7,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 <children><Label layoutX="35.0" layoutY="67.0" text="Name" /><Label layoutX="35.0" layoutY="105.0" text="Surname" /><TextField fx:id="name" layoutX="102.0" layoutY="62.0" /><TextField fx:id="surname" layoutX="102.0" layoutY="100.0" /><TableView fx:id="books" layoutX="35.0" layoutY="151.0" prefHeight="200.0" prefWidth="438.0" xmlns:fx="http://javafx.com/fxml">
   <columns>
-    <TableColumn id="" fx:id="title" prefWidth="75.0" text="Title" />
+    <TableColumn fx:id="title" prefWidth="75.0" text="Title" />
     <TableColumn fx:id="description" prefWidth="150.0" text="Description" />
   </columns>
 </TableView>
